# svocket

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
actix/: Cargo.toml
actix/src/: database.rs  main.rs
actix/src/api/: ingredient_controller.rs  mod.rs  recipie.rs  recipie_controller.rs
actix/src/model/: ingredient_model.rs  recipie.rs  recipie_model.rs
rocket/: Cargo.toml
rocket/src/: main.rs
rocket/src/database/: surreal.rs
rocket/src/model/: ingredient_model.rs  mod.rs  recipie_model.rs
rocket/src/models/: recipie.rs
rocket/src/routes/: ingredient_routes.rs  mod.rs  recipie.rs  recipie_routes.rs  response.rs
svelte/: package.json  tailwind.config.js  vite.config.ts
svelte/src/: app.html  yellow.postcss
svelte/src/lib/components/: AnimatedRoute.svelte  Breadcrumbs.svelte  DataList.svelte  ModalHandler.svelte  MultiProgress.svelte  PageTransition.svelte
svelte/src/lib/forms/: RecipieForm.svelte
svelte/src/lib/modals/: ModalHandler.svelte  RecipieModal.svelte
svelte/src/lib/utils/: queries.ts  request.ts  surreal.ts  utils.ts
svelte/src/routes/: +layout.svelte
svelte/src/routes/api/: queries.ts  surreal.ts
svelte/src/routes/api/recipie/: RecipieTypes.ts
svelte/src/routes/counter/: +page.svelte
svelte/src/routes/counter/[count]/: +page.svelte  +page.ts
svelte/src/routes/recipie/: +page.svelte
svelte/src/theme/: _smui-theme.scss
svelte/src/theme/dark/: _smui-theme.scss
svelte/src/utils/: request.ts  store.ts  utils.ts
svelte/static/: smui-dark.css  smui.css
(+1 files in other folders)
